Bug 1933452 - set 'mFirstFrameTime' to prevent skipping video frames in the case of newly created HW decoder fails on decoding the first frame. r=media-playback-reviewers,karlt

When a video error occurs, we have a mechanism in place to skip to the
next frame if next keyframe exists [1]. However, if the error is caused
by the inability to use HW decoding when recreating a decoder, this
mechanism should not be triggered.

By setting mFirstFrametime when creating a new decoder on stream ID
change, we ensure that we can fall back to the SW decoder with the
correct sample time, preventing the skipping of frames.

[1] https://searchfox.org/mozilla-central/rev/48556b26b96a32672caa46b9abb6d56c234cd84f/dom/media/MediaFormatReader.cpp#2594-2599

Differential Revision: https://phabricator.services.mozilla.com/D230891